crates/reinhardt-pages/tests/ui/form/fail/char_field_with_generic.stderr
error: CharField does not accept a type parameter
  --> tests/ui/form/fail/char_field_with_generic.rs:11:14
   |
11 |             username: CharField<i32> { },
   |                       ^^^^^^^^^
